# XML::TreePP Changes

2007/08/27 (0.29)
    * 34_utf8_flag.t skips all tests on Perl 5.8.0
      utf8::is_utf8() wasn't there in 5.8.0.
      http://www.nntp.perl.org/group/perl.perl5.changes/2003/08/msg8628.html
    * 34_utf8_flag.t passes all tests on Perl 5.8.1-2
      http://rt.perl.org/rt3/Public/Bug/Display.html?id=24846
    * avoid "Use of uninitialized value in substitution" in xml_escape

2007/08/13 (0.27)
    * bug fix: autoload Encode.pm on particular environment, $] == 5.008
      http://www.nntp.perl.org/group/perl.cpan.testers/2007/08/msg557739.html
      http://www.nntp.perl.org/group/perl.cpan.testers/2007/08/msg557741.html
    * pod revised. OPTIONS FOR PARSING/WRITING sections are separated.

2007/08/07 (0.26)
    * new option: force_array => '*' means every elements (thanks to Niek)
    * new option: force_hash => [], and also '*' means every elements
    * new option: elem_class => 'class'
    * new tests: t/35_force_hash.t t/36_elem_class.t

2007/07/28 (0.22)
    * new option: ident => 2 (thanks to Aaron)
    * new option: utf8_flag => 1
    * new option: base_class => 'class'
    * new tests: t/32_base_class.t t/33_indent.t t/34_utf8_flag.t
    * LICENSE field added in META.yml

2007/07/25 (0.21)
    * bug fix: use_ixhash missing order on elements with attribute(s)

2007/07/22 (0.20)
    * new option: http_lite => HTTP::Lite->new()
    * new option: lwp_useragent => LWP::UserAgent->new() (thanks to NEELY)
      http://rt.cpan.org/Ticket/Display.html?id=28167
    * new option: use_ixhash => 1 (thanks to RENEEB)
      http://rt.cpan.org/Ticket/Display.html?id=23522
    * first_out and last_out options keep its order (thanks to BASHI and sajohn52)
      http://tech.groups.yahoo.com/group/xml-treepp/message/13
    * new tests: 27_http-lite-force.t 28_http-lwp-force.t
      29_http-lwp-withcache.t 30_first_out.t 31_tie_ixhash.t

2006/11/03 (0.19)
    * new option: text_node_key (thanks to Niek)
    * attr_prefix now supports zero-length prefix.
